# x227f-frontend

./: 88x31-parse.py  Cargo.toml  README.md
src/: main.rs
src/routes/: button.rs  mod.rs  page.rs  random.rs  search.rs  stats.rs
static/: button.html  index.html  page.html  random.html  search.html  style.css
