[package]
name = "eeto-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-limit = "0.1.0-alpha.2"
duckdb = { version = "1.0.0", features = ["bundled"] }
http = "1.1.0"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "sync"] }
